<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiary"
    tools:context="pl.plantoplate.ui.registration.RegisterActivity">


    <TextView
        android:layout_marginTop="70dp"
        android:id="@+id/plantoplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"

        android:fontFamily="@font/quicksand_semibold"

        android:gravity="top"
        android:text="@string/plantoplate"
        android:textAppearance="@style/plantoplate"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <TextView
        android:id="@+id/rejestracja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/quicksand_regular"

        android:gravity="top"

        android:text="@string/rejestracja"
        android:textAppearance="@style/rejestracja"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantoplate"
        app:layout_constraintVertical_bias="0.047" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wprowadz_imie"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"

        android:fontFamily="@font/quicksand_regular"

        android:hint="@string/wprowadz_imie"
        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="?attr/colorTertiary"

        app:hintTextColor="?attr/colorSecondaryVariant"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejestracja"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterName"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:maxLines="1"
            android:singleLine="true"

            android:textColor="?attr/colorSecondaryVariant"

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_the_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"

        android:fontFamily="@font/quicksand_regular"
        android:hint="@string/wprowadz_email"

        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="?attr/colorTertiary"

        app:hintTextColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadz_imie"
        app:layout_constraintVertical_bias="0.036">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_email"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:maxLines="1"
            android:singleLine="true"

            android:textColor="?attr/colorSecondaryVariant"

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wprowadz_haslo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:fontFamily="@font/quicksand_regular"
        android:hint="@string/wprowadz_haslo"

        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="?attr/colorTertiary"
        app:endIconMode="password_toggle"

        app:endIconTint="?attr/colorSecondaryVariant"

        app:hintTextColor="?attr/colorSecondaryVariant"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_the_name"
        app:layout_constraintVertical_bias="0.042">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_password"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:inputType="textPassword"
            android:maxLines="1"

            android:singleLine="true"

            android:textColor="?attr/colorSecondaryVariant"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_mam_lat_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"

        android:shadowColor="?attr/colorTertiary"

        android:text="Oswiadczam, ze mam ukonczone 13 lat"

        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"

        android:textAppearance="@style/wyra_am_zgo"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadz_haslo"
        app:layout_constraintVertical_bias="0.065"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkbox_wyrazam_zgode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"

        android:layout_marginRight="22dp"
        android:fontFamily="@font/quicksand_regular"
        android:shadowColor="?attr/colorTertiary"

        android:text="@string/wyra_am_zgo"
        android:textAppearance="@style/wyra_am_zgo"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_mam_lat_13"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/masz_konto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:clickable="true"
        android:fontFamily="@font/quicksand_medium"

        android:gravity="center_horizontal|center_vertical"

        android:text="@string/masz_konto_"
        android:textAppearance="@style/masz_konto_"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_zaloz_konto"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/button_zaloz_konto"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:backgroundTint="?attr/colorPrimaryVariant"

        android:clickable="true"

        android:fontFamily="@font/quicksand_medium"
        android:text="@string/zaloz_konto"

        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_wyrazam_zgode"
        app:layout_constraintVertical_bias="0.139"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
