...
        android:text="@string/nie_masz_konto_"
        android:textAppearance="@style/masz_konto_"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_zaloguj_sie"
        app:layout_constraintVertical_bias="0.328" />

    <Button
        android:id="@+id/button_zaloguj_sie"
        android:layout_width="236dp"
        android:layout_height="70dp"
...
