...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowad_email"
        app:layout_constraintVertical_bias="0.172">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_the_name"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:maxLines="1"
...

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_zatwierdz"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
...
